--- a/package.json
+++ b/package.json
@@ -1,35 +1,21 @@
 {
-	"name": "gummy",
+	"name": "oneShot",
 	"version": "1.0.0",
 	"description": "",
-	"main": "index.js",
+	"main": "app.js",
 	"scripts": {
-		"build": "webpack --mode=production --config ./bundler/webpack.config.js",
-		"dev": "webpack-dev-server --mode=development --config ./bundler/webpack.config.js"
+		"start": "node app.js",
+		"devStart": "nodemon app.js",
+		"sass": "node-sass public/sass/main.scss public/styles/main.css -w"
 	},
-	"keywords": [],
 	"author": "",
 	"license": "ISC",
-	"dependencies": {},
-	"devDependencies": {
-		"@babel/core": "^7.10.2",
-		"@babel/preset-env": "^7.10.2",
-		"babel-loader": "^8.1.0",
-		"clean-webpack-plugin": "^3.0.0",
-		"copy-webpack-plugin": "^5.1.1",
-		"css-loader": "^3.6.0",
-		"file-loader": "^5.1.0",
-		"gsap": "^3.3.2",
-		"html-loader": "^0.5.5",
-		"html-webpack-plugin": "^3.2.0",
-		"mini-css-extract-plugin": "^0.9.0",
+	"dependencies": {
+		"express": "^4.17.1",
 		"minimist": "^1.2.5",
-		"p5": "^1.0.0",
-		"sass": "^1.26.9",
-		"sass-loader": "^8.0.2",
-		"style-loader": "^1.2.1",
-		"webpack": "^4.43.0",
-		"webpack-cli": "^3.3.11",
-		"webpack-dev-server": "^3.11.0"
-	}
+		"node-sass": "^4.14.1",
+		"nodemon": "^2.0.2",
+		"socket.io": "^2.3.0"
+	},
+	"devDependencies": {}
 }
