--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"canvas": "^2.6.1",
 		"express": "^4.17.1",
 		"minimist": "^1.2.5",
 		"node-sass": "^4.14.1",
