--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
 		"minimist": "^1.2.5",
 		"node-sass": "^4.14.1",
 		"nodemon": "^2.0.2",
-		"socket.io": "^2.3.0"
+		"socket.io": "^2.3.0",
+		"uuid": "^8.3.1"
 	},
 	"devDependencies": {}
 }
